--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "htmlReport": "npx playwright test --reporter=html",
     "chromium": "npx playwright test --project chromium",
     "webkit": "npx playwright test launchContexts --project webkit",
-    "SmokeTest": "npx playwright test --grep @Smoke"
+    "SmokeTest": "npx playwright test --grep @Smoke",
+    "SanityTest": "npx playwright test --grep @Sanity"
   },
   "keywords": [],
   "author": "",
